@@ -270,7 +270,11 @@ func (s *SandboxDecoder) Decode(pack *pipeline.PipelinePack) (packs []*pipeline.
 	}
 	if retval < 0 {
 		atomic.AddInt64(&s.processMessageFailures, 1)
-		s.err = fmt.Errorf("Failed parsing: %s", s.pack.Message.GetPayload())
+		if s.pack != nil {
+			s.err = fmt.Errorf("Failed parsing: %s", s.pack.Message.GetPayload())
+		} else {
+			s.err = fmt.Errorf("Failed after a successful inject_message call")
+		}
 		if len(s.packs) > 1 {
 			for _, p := range s.packs[1:] {
 				p.Recycle()
